# AI-Calender-Self

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  calendar.db  index.html  main.py  package-lock.json  pyproject.toml  requirements.txt  start.sh  start_server.sh  test_api.py  tsconfig.app.json  vite.config.ts
AI-Calender-self-fronted/: .env.example  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
AI-Calender-self-fronted/src/: App.tsx  index.css
app/: __init__.py  config.py  database.py  main.py
app/api/: routes.py
app/mcp/: __init__.py  server.py  tools.py
app/models/: __init__.py  calendar.py  chat.py
app/services/: __init__.py  calendar_service.py  chat_service.py
app/skills/: __init__.py  loader.py
server/: .env  pyproject.toml  requirements.txt  run.py
server/app/: __init__.py  initializers.py  main.py
server/app/core/: config.py  security.py
server/app/mcp/: __init__.py  protocol.py  server.py
server/app/models/: database.py  schemas.py
server/app/routers/: ai.py  ai_v2.py  auth.py  events.py
server/app/services/: ai_service.py  ai_service_v2.py  ai_service_v2_pure_fc.py
server/app/skills/: __init__.py  base.py  calendar_skills.py  meeting_assistant_skill.py  registry.py
server/app/tools/: __init__.py  base.py  calendar_tools.py  notification_tools.py  registry.py  schedule_tools.py
src/: App.tsx  main.tsx
src/ai/: AIAssistant.tsx
src/calendar/: DayView.tsx  EventDialog.tsx  MonthView.tsx  WeekView.tsx
src/components/: AuthDialog.tsx  Header.tsx
src/hooks/: useAI.ts  (+3 more)
(+11 files in other folders)
