[project]
name = "ai-calender-self"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.18.1",
    "fastapi==0.109.0",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.27.0",
]
