[project]
name = "ai-calender-self"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "httpx==0.27.2",
    "openai==1.54.0",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests>=2.32.5",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0",
]
